[gd_scene load_steps=11 format=3 uid="uid://c64bqwnv25phb"]

[ext_resource type="Texture2D" uid="uid://cufrrxvxrf5ie" path="res://buildings/tower.png" id="1_0nb5l"]
[ext_resource type="Script" path="res://buildings/tower.gd" id="2_55f2b"]
[ext_resource type="Script" path="res://Areas/Area2D.gd" id="3_tc1b3"]
[ext_resource type="PackedScene" uid="uid://bydkjmor6dd4g" path="res://select.tscn" id="4_h5n2u"]
[ext_resource type="Script" path="res://turrets/2DO.gd" id="5_kbjpx"]
[ext_resource type="Script" path="res://buildings/Targeting.gd" id="6_btunu"]

[sub_resource type="PlaneMesh" id="PlaneMesh_c4ufr"]
size = Vector2(100, 100)
orientation = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xg3sn"]
size = Vector2(60, 60)

[sub_resource type="CircleShape2D" id="CircleShape2D_g8bvo"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wk5bg"]
radius = 1.0

[node name="Tower" type="MeshInstance2D"]
z_as_relative = false
y_sort_enabled = true
rotation = 3.14159
mesh = SubResource("PlaneMesh_c4ufr")
texture = ExtResource("1_0nb5l")
script = ExtResource("2_55f2b")

[node name="2DO" type="Node" parent="."]
script = ExtResource("5_kbjpx")

[node name="Area2D" type="Area2D" parent="." groups=["building"]]
script = ExtResource("3_tc1b3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 0.785398
shape = SubResource("RectangleShape2D_xg3sn")

[node name="Select" parent="." instance=ExtResource("4_h5n2u")]

[node name="Targeting" type="Node" parent="."]
script = ExtResource("6_btunu")

[node name="Min" type="Area2D" parent="Targeting"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Targeting/Min"]
shape = SubResource("CircleShape2D_g8bvo")

[node name="Max" type="Area2D" parent="Targeting"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Targeting/Max"]
shape = SubResource("CircleShape2D_wk5bg")

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="Area2D" method="_on_area_exited"]
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_mouse_exited"]
